fix : issue with loading customer details in order details page